--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "vuejs-progress-bar",
-  "description": "A progress bar component for Vue.js",
-  "version": "1.2.8",
-  "author": "Lars M Hejll, hejlllars@hotmail.com , softwarefun.no",
+  "name": "vue3-progress-bar",
+  "description": "A progress bar component for Vue 3",
+  "version": "2.0.0",
+  "author": "Iago Mussel",
   "license": "MIT",
-  "homepage": "https://github.com/larsmars/vuejs-progress-bar#readme",
+  "homepage": "https://github.com/iagomussel/vue3-progress-bar#readme",
   "private": false,
   "main": "./dist/ProgressBar.common.js",
   "browser": "dist/ProgressBar.umd.js",
@@ -15,14 +15,14 @@
     "postversion": "git push -u --follow-tags origin master && npm publish"
   },
   "dependencies": {
-    "vue":"^3.0.0"
+    "vue": "^3.0.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^5.0.4",
-    "@vue/cli-service": "^5.0.4",
-    "node-sass": "7.0.1",
+    "@vue/cli-plugin-babel": "^5.0.8",
+    "@vue/cli-service": "^5.0.8",
+    "node-sass": "^8.0.0",
     "sass-loader": "^13.0.0",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.7.14"
   },
   "files": [
     "dist"
