--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue3-progress-bar",
+  "name": "vuejs3-progressbar",
   "description": "A progress bar component for Vue 3",
   "version": "2.0.0",
   "author": "Iago Mussel",
@@ -12,7 +12,9 @@
     "serve": "vue-cli-service serve ./test/main.js",
     "build": "vue-cli-service build --target lib --name ProgressBar src/index.js",
     "version": "npm run build && git add -A",
-    "postversion": "git push -u --follow-tags origin master && npm publish"
+    "postversion": "git push -u --follow-tags origin master && npm publish",
+    "lint": "vue-cli-service lint",
+    "test": "jest"
   },
   "dependencies": {
     "vue": "^3.0.0"
@@ -22,14 +24,37 @@
     "@vue/cli-service": "^5.0.8",
     "node-sass": "^8.0.0",
     "sass-loader": "^13.0.0",
-    "vue-template-compiler": "^2.7.14"
+    "vue-template-compiler": "^2.7.14",
+    "@vue/test-utils": "^1.1.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^6.2.2",
+    "jest": "^26.6.1",
+    "jest-serializer-vue": "^2.0.2",
+    "vue-jest": "^3.0.7",
+    "less": "^3.9.0",
+    "less-loader": "^4.1.0"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended"
+    ],
+    "parserOptions": {
+      "parser": "babel-eslint"
+    },
+    "rules": {}
   },
   "files": [
     "dist"
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/iagomussel/vue3-progress-bar"
+    "url": "https://github.com/iagomussel/vuejs3-progressbar"
   },
   "postcss": {
     "plugins": {
