--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vuejs3-progressbar",
   "description": "A progress bar component for Vue 3",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "author": "Iago Mussel",
   "license": "MIT",
   "homepage": "https://github.com/iagomussel/vue3-progress-bar#readme",
@@ -16,24 +16,20 @@
     "lint": "vue-cli-service lint",
     "test": "jest"
   },
-  "dependencies": {
-    "vue": "^3.0.0"
-  },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^5.0.8",
     "@vue/cli-service": "^5.0.8",
-    "node-sass": "^8.0.0",
-    "sass-loader": "^13.0.0",
-    "vue-template-compiler": "^2.7.14",
     "@vue/test-utils": "^1.1.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "jest": "^26.6.1",
     "jest-serializer-vue": "^2.0.2",
-    "vue-jest": "^3.0.7",
     "less": "^3.9.0",
-    "less-loader": "^4.1.0"
+    "less-loader": "^4.1.0",
+    "node-sass": "^8.0.0",
+    "sass-loader": "^13.0.0",
+    "vue-jest": "^4.0.1",
+    "vue-template-compiler": "^2.7.14"
   },
   "eslintConfig": {
     "root": true,
@@ -75,5 +71,8 @@
     "progress",
     "progressbar",
     "progress-bar"
-  ]
+  ],
+  "dependencies": {
+    "@vue/vue3-jest": "^28.1.0"
+  }
 }
